...
                }
            }
            is AlarmListEvent.OnDeleteAlarmClick -> {
                viewModelScope.launch {
                    usecases.deleteAlarm(event.alarm)
                    recentlyDeletedAlarm = event.alarm
                    sendUiEvent(ShowSnackbar(message = "Alarm Deleted", action = "Undo"))
                }
            }
            is AlarmListEvent.DeleteTestAlarm -> {
                viewModelScope.launch {
                    usecases.deleteAlarm(event.alarmId)
                }
...
